Fixed overflow of text from cards.

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@ body {
     margin: 5px;
     background-color: whitesmoke;
     border-radius: 8px;
+    word-wrap: break-word;
 }
 
 .cardWidth {
